--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
+              primary: '#9333ea', // Purple-600 matching Naviksha brand
               scaler: {
                 blue: '#2d5bff',
                 dark: '#020617',
